Bug 247766 - With UI-side compositing, many tests hit ASSERT(m_scrollingTrees.contains(webPage->identifier()));
Summary: With UI-side compositing, many tests hit ASSERT(m_scrollingTrees.contains(web...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Scrolling (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-10 15:18 PST by Simon Fraser (smfr)
Modified: 2022-11-11 09:05 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2022-11-10 15:18:43 PST
Assertion is wrong with ui-side compositing.
Comment 1 Radar WebKit Bug Importer 2022-11-10 15:19:19 PST
<rdar://problem/102214322>
Comment 2 Simon Fraser (smfr) 2022-11-10 15:21:39 PST
Pull request: https://github.com/WebKit/WebKit/pull/6373
Comment 3 EWS 2022-11-11 09:05:35 PST
Committed 256571@main (82e5917868fa): <https://commits.webkit.org/256571@main>

Reviewed commits have been landed. Closing PR #6373 and removing active labels.